[package]
name = "ping-async"
version = "0.1.0"
authors = ["hankbao <hankbao84@gmail.com>"]
license = "MIT"
description = "Unprivileged Async Ping"
repository = "https://github.com/hankbao/ping-async"
homepage = "https://lib.rs/crates/ping-async"
documentation = "https://docs.rs/ping-async"
readme = "README.md"
keywords = [
    "ping",
    "icmp",
    "async",
    "tokio",
    "winapi",
    "socket",
    "win32",
    "linux",
    "macos",
]
categories = ["network-programming"]
edition = "2021"

[dependencies]
log = "0.4"
futures = "0.3"
static_assertions = "1.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
byteorder = "1.0"
ippacket = "0.1"
rand = "0.8"
socket2 = "0.5.6"
tokio = { version = "1.36", features = ["macros", "net", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
