[package]
name = "ping-async"
version = "0.1.1"
authors = ["hankbao <hankbao84@gmail.com>"]
license = "MIT"
description = "Unprivileged Async Ping"
repository = "https://github.com/hankbao/ping-async"
homepage = "https://lib.rs/crates/ping-async"
documentation = "https://docs.rs/ping-async"
readme = "README.md"
keywords = ["ping", "icmp", "async", "tokio", "future"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
log = "0.4"
futures = "0.3"
static_assertions = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
byteorder = "1"
ippacket = "0.1"
rand = "0.9"
socket2 = "0.5"
tokio = { version = "1", features = ["macros", "rt", "net", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
