[package]
name = "ping-async"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
thiserror = { version = "2", features = ["std"], default-features = false }
log = { version = "0.4", default-features = false }

[target.'cfg(target_family = "windows")'.dependencies]
flume = { version = "0.11", features = ["async"], default-features = false }
windows = { version = "0.60", features = [
    "std",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
], default-features = false }

[target.'cfg(target_family = "unix")'.dependencies]
socket2 = { version = "0.5", default-features = false }
pnet_packet = { version = "0.35", default-features = false }
tokio = { version = "1", features = [
    "macros",
    "net",
    "time",
], default-features = false }
